--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -42,7 +42,7 @@
     "micro_data = micro_data.transpose()\n",
     "d = api();\n",
     "\n",
-    "d.dva(adata=micro_data, threads=1, file_path=result_path)"
+    "d.vazidm(adata=micro_data, threads=1, file_path=result_path)"
    ],
    "metadata": {
     "collapsed": false
